logs/Peregrine/job-16147230.log
  File "run_mlm.py", line 59
    model_name_or_path: Optional[str] = field(
                      ^
SyntaxError: invalid syntax


###############################################################################
Peregrine Cluster
Job 16147230 for user 's2964007'
Finished at: Sun Dec 13 22:24:39 CET 2020

Job details:
============

Job ID              : 16147230
Name                : BERT_Finetuning
User                : s2964007
Partition           : gpu
Nodes               : pg-gpu23
Number of Nodes     : 1
Cores               : 12
State               : FAILED
Submit              : 2020-12-13T22:02:42
Start               : 2020-12-13T22:24:37
End                 : 2020-12-13T22:24:38
Reserved walltime   : 01:00:00
Used walltime       : 00:00:01
Used CPU time       : --
% User (Computation): 52.00%
% System (I/O)      : 44.00%
Mem reserved        : 4000M/node
Max Mem used        : 0.00  (pg-gpu23)
Max Disk Write      : 0.00  (pg-gpu23)
Max Disk Read       : 0.00  (pg-gpu23)
Average GPU usage   : No GPU metrics available (pg-gpu23)


Acknowledgements:
=================

Please see this page for information about acknowledging Peregrine in your publications:

https://wiki.hpc.rug.nl/peregrine/additional_information/scientific_output

################################################################################
